# TrueConfTest

./: CMakeLists.txt
src/: main.cpp  random_number_generator.h
